# Meta_AI_Hack

./: Dockerfile  README.md  baseline.py  client.py  debug_baseline.py  explainer.html  guideline.html  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  test_groq.py
server/: app.py  dataset_factory.py  environment.py  graders.py
