[project]
name = "dataclean-env"
version = "2.0.0"
description = "Real-world data cleaning OpenEnv environment"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "pandas==2.2.3",
    "numpy==1.26.4",
    "pydantic==2.10.4",
    "openai==1.55.3",
    "requests==2.32.3",
    "python-multipart==0.0.9",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"